[gd_scene load_steps=2 format=3 uid="uid://cxccgupwp413f"]

[ext_resource type="Script" path="res://MultiplayerContoller.gd" id="1_o5moy"]

[node name="Menu" type="Control"]
layout_mode = 3
anchor_right = 1.002
anchor_bottom = 1.001
offset_left = 3.0
offset_top = 1.0
offset_right = -0.84021
offset_bottom = -0.0800781
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5moy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 501.0
offset_right = 1911.0
offset_bottom = 855.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 445.0
offset_right = 1381.0
offset_bottom = 476.0
placeholder_text = "Enter a Custom Username"
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 24.0
offset_right = 1901.0
offset_bottom = 307.0
text = "SOCIAL CIRCLE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
